[project]
name = "agenteventas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "livekit>=0.22.0",
    "livekit-agents>=0.12.17",
    "livekit-plugins-openai>=0.11.3",
    "openai-agents>=0.0.5",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "supabase>=2.14.0",
]
